--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Validate Your HTML</title>
-    <meta charset="utf-8 />
+    <meta charset="utf-8" />
   </head>
   <body id="main">
     <header>
