--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <title>Validate Your HTML</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
   </head>
-  <body id="main">
+  <body>
     <header>
       <h1>There Are Five Errors in This HTML</h1>
     </header>
